--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-drag-drop-files": "^2.3.10",
+    "react-dropdown": "^1.11.0",
+    "react-dropzone": "^14.2.3",
     "tailwindcss": "3.3.3"
   }
 }
