--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.25.3",
     "autoprefixer": "10.4.16",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.4",
@@ -20,5 +21,8 @@
     "react-dropdown": "^1.11.0",
     "react-dropzone": "^14.2.3",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "@types/react": "18.2.25"
   }
 }
