--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "10.4.16",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.4",
+    "grainjs": "^1.0.2",
     "next": "13.5.4",
     "postcss": "8.4.31",
     "react": "18.2.0",
@@ -23,6 +24,7 @@
     "tailwindcss": "3.3.3"
   },
   "devDependencies": {
-    "@types/react": "18.2.25"
+    "@types/react": "18.2.25",
+    "typescript": "5.2.2"
   }
 }
