--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "@clerk/nextjs": "^4.25.3",
     "autoprefixer": "10.4.16",
+    "axios": "^1.5.1",
+    "chart.js": "^4.4.0",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.4",
+    "faker": "^6.6.6",
     "grainjs": "^1.0.2",
     "next": "13.5.4",
     "postcss": "8.4.31",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-drag-drop-files": "^2.3.10",
     "react-dropdown": "^1.11.0",
@@ -24,6 +28,7 @@
     "tailwindcss": "3.3.3"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.1.0",
     "@types/react": "18.2.25",
     "typescript": "5.2.2"
   }
